Bug 253394 - Date range not included in export of CSV files
Summary: Date range not included in export of CSV files
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-06 15:37 UTC by Alvaro Soliverez
Modified: 2010-10-06 15:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-10-06 15:37:37 UTC
Version:           4.5 (using KDE 4.5.1) 
OS:                Linux

User reports:

I'm running KMyMoney 1.0.5 using KDE 3.5.10 on Ubuntu Lucid.

I generate an ongoing Income & Expenses by Year report for my tax
software. The report includes all my tax accounts and relevant tax
categories. The report displays with the date range (Our tax year runs
from 1 March to 28/29 February). However when the report is exported to
a .csv file the date range is not included.

I generate a report every month to update my tax forecast which
extrapolates my final tax liability. I have modified the tax software to
request the date range, but it is a pain when I try 'what ifs' to have
to continually input this info.

Reproducible: Always
Comment 1 Alvaro Soliverez 2010-10-06 15:40:39 UTC
SVN commit 1183187 by asoliverez:

Included date range in CSV exports of pivot reports

BUG:253394

 M  +1 -0      pivottable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1183187
Comment 2 Alvaro Soliverez 2010-10-06 15:45:48 UTC
SVN commit 1183189 by asoliverez:

Included date range in CSV exports of pivot reports
Ported to stable branch

BUG:253394

 M  +1 -0      pivottable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1183189