Included date range in CSV exports of pivot reports Ported to stable branch

BUG:253394

svn path=/branches/kmymoney/4.5/; revision=1183189